Add simple CommandUtils